--- a/themes/habitmelon/static/css/base.css
+++ b/themes/habitmelon/static/css/base.css
@@ -36,6 +36,7 @@
     }
 
     nav ul {
+        padding: 0;
         list-style-type: none;
     }
 
@@ -46,8 +47,8 @@
     nav li a {
         display: block;
         text-align: center;
-        padding-left: 6px;
-        padding-right: 6px;
+        padding-left: 1px;
+        padding-right: 1em;
         padding-top: 1px;
         padding-bottom: 1px;
         text-decoration: none;
